--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
