--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,14 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DEBUG: false
+          envkey_VITE_BASE_URL: '${{ secrets.VITE_BASE_URL }}'
+          file_name: .env
+          fail_on_empty: false
+
       - name: Build project
         run: npm run build
         env:
