--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+env:
+  VITE_INTERNAL: true
+
 jobs:
   build:
     name: Build
@@ -22,8 +25,8 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1.3
+      - name: Create .env file
+        uses: SpicyPizza/create-envfile@v1.3.0
         with:
           envkey_DEBUG: false
           envkey_VITE_BASE_URL: '${{ secrets.VITE_BASE_URL }}'
