Create env file manually

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - master
 
-env:
-  VITE_INTERNAL: true
-
 jobs:
   build:
     name: Build
@@ -24,6 +21,12 @@ jobs:
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
+
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} >> .env
+          cat .env
 
       - name: Build project
         run: npm run build
